# ChangeLog for sys-apps/kudzu-knoppix
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/kudzu-knoppix/ChangeLog,v 1.11 2004/09/03 21:03:24 pvdabeel Exp $

  03 Sep 2004; Pieter Van den Abeele <pvdabeel@gentoo.org>
  kudzu-knoppix-1.1.36.ebuild:
  Masked kudzu-knoppix-1.1.36.ebuild stable for ppc

  27 Jun 2004; Danny van Dyk <kugelfang@gentoo.org>
  kudzu-knoppix-1.1.36.ebuild:
  dosbin ddc* doesn't work on amd64 as the particular executables won't get
  build. Removed.

  25 Jun 2004; Chris Gianelloni <wolf31o2@gentoo.org>
  kudzu-knoppix-1.1.36.ebuild:
  Added line to install ddcxinfo stuff on amd64.

  02 Jun 2004; Chris Gianelloni <wolf31o2@gentoo.org>
  kudzu-knoppix-1.1.36.ebuild:
  Added blocker for kudzu.

  30 May 2004; Chris Gianelloni <wolf31o2@gentoo.org>
  kudzu-knoppix-1.1.36.ebuild:
  QA cleanup

  21 May 2004; Chris Gianelloni <wolf31o2@gentoo.org>
  kudzu-knoppix-1.1.36.ebuild:
  Stabilizing on x86.

  20 May 2004; Chris Gianelloni <wolf31o2@gentoo.org>
  kudzu-knoppix-1.1.36.ebuild:
  Added sys-libs/slang DEPEND.

  18 May 2004; David Holm <dholm@gentoo.org> kudzu-knoppix-1.1.36.ebuild:
  Fixed typo.

  14 May 2004; Chris Gianelloni <wolf31o2@gentoo.org>
  kudzu-knoppix-1.1.36.ebuild:
  Fixing S and closing bug #51083.

*kudzu-knoppix-1.1.36 (14 May 2004)

  14 May 2004; Chris Gianelloni <wolf31o2@gentoo.org> +metadata.xml,
  +kudzu-knoppix-1.1.36.ebuild:
  Initial import.
