@@ -1,6 +1,10 @@
 # ChangeLog for sys-apps/kudzu
 # Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/kudzu/ChangeLog,v 1.14 2004/09/18 01:10:31 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/kudzu/ChangeLog,v 1.15 2004/09/30 13:26:01 wolf31o2 Exp $
+
+  30 Sep 2004; Chris Gianelloni <wolf31o2@gentoo.org> kudzu-0.99.66.ebuild,
+  kudzu-0.99.99.ebuild, kudzu-1.1.43.ebuild, kudzu-1.1.62.ebuild:
+  Adding sys-devel/gettext DEPEND on closing bug #65845.
 
 *kudzu-1.1.62 (17 Sep 2004)
 
