@@ -1,6 +1,10 @@
 # ChangeLog for sys-apps/kudzu-knoppix
 # Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/kudzu-knoppix/ChangeLog,v 1.11 2004/09/03 21:03:24 pvdabeel Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/kudzu-knoppix/ChangeLog,v 1.12 2004/09/30 13:23:02 wolf31o2 Exp $
+
+  30 Sep 2004; Chris Gianelloni <wolf31o2@gentoo.org>
+  kudzu-knoppix-1.1.36.ebuild:
+  Adding sys-devel/gettext DEPEND on closing bug #65845.
 
   03 Sep 2004; Pieter Van den Abeele <pvdabeel@gentoo.org>
   kudzu-knoppix-1.1.36.ebuild:
